// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileImageUpload Component renders upload progress when progress > 0 1`] = `
<div
  class="MuiBox-root css-k5rr6j"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-dqyg8w-MuiAvatar-root"
    data-testid="profile-avatar"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-1mo2pzk-MuiSvgIcon-root-MuiAvatar-fallback"
      data-testid="PersonIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    class="MuiBox-root css-0"
  >
    <label
      aria-disabled="true"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1qh89up-MuiButtonBase-root-MuiButton-root"
      data-testid="upload-button"
      role="button"
      tabindex="-1"
    >
      <input
        accept="image/*"
        data-testid="file-input"
        disabled=""
        hidden=""
        type="file"
      />
    </label>
    <span
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1dfe1iy-MuiLinearProgress-root"
      data-testid="upload-progress"
      role="progressbar"
    >
      <span
        class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
        style="transform: translateX(-50%);"
      />
    </span>
  </div>
</div>
`;

exports[`ProfileImageUpload Component renders with default props 1`] = `
<div
  class="MuiBox-root css-k5rr6j"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-dqyg8w-MuiAvatar-root"
    data-testid="profile-avatar"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-1mo2pzk-MuiSvgIcon-root-MuiAvatar-fallback"
      data-testid="PersonIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    class="MuiBox-root css-0"
  >
    <label
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1qh89up-MuiButtonBase-root-MuiButton-root"
      data-testid="upload-button"
      role="button"
      tabindex="0"
    >
      <input
        accept="image/*"
        data-testid="file-input"
        hidden=""
        type="file"
      />
    </label>
  </div>
</div>
`;

exports[`ProfileImageUpload Component renders with profile image 1`] = `
<div
  class="MuiBox-root css-k5rr6j"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular css-rueoqj-MuiAvatar-root"
    data-testid="profile-avatar"
  >
    <img
      alt="Profile"
      class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
      src="profile.jpg"
    />
  </div>
  <div
    class="MuiBox-root css-0"
  >
    <label
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1qh89up-MuiButtonBase-root-MuiButton-root"
      data-testid="upload-button"
      role="button"
      tabindex="0"
    >
      <input
        accept="image/*"
        data-testid="file-input"
        hidden=""
        type="file"
      />
    </label>
  </div>
</div>
`;
